--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,21 @@
-version: '3'
+version: "3.7"
+
+# https://stackoverflow.com/questions/52961824/run-gatsby-with-docker-compose
 services:
-  app:
+  gatsby:
     build:
       context: .
       dockerfile: Dockerfile.dev
+    entrypoint: gatsby
+    volumes:
+      - .:/app
+
+  develop:
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
+    command: gatsby develop -H 0.0.0.0
     ports:
       - "8000:8000"
-      - "9929:9929"
-      - "9230:9230"
     volumes:
-      - /app/node_modules
       - .:/app
-    environment:
-      - NODE_ENV=development
-      - GATSBY_WEBPACK_PUBLICPATH=/
