--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -15,8 +15,10 @@ RUN apk update && apk upgrade && \
 
 RUN npm install -g gatsby-cli
 
-# WORKDIR /app
+RUN yarn install && yarn cache clean
+
+WORKDIR /app
 # COPY ./package.json .
-# RUN yarn install && yarn cache clean
+
 # COPY . .
 # CMD ["yarn", "develop", "-H", "0.0.0.0" ]
